SERVER-62277 Add `freeStorage` option to dbstats, off by default